substrate/primitives/api/test/tests/ui/method_ver_lower_than_trait_ver.stderr
error: Method version `1` is older than (or equal to) trait version `2`.Methods can't define versions older than the trait version.
  --> tests/ui/method_ver_lower_than_trait_ver.rs:21:3
   |
21 |         #[api_version(1)]
   |         ^

error: Trait version is set here.
  --> tests/ui/method_ver_lower_than_trait_ver.rs:19:2
   |
19 |     #[api_version(2)]
   |     ^
